# rubik

./: .gitignore  .gitmodules  AppDelegate.h  AppDelegate.mm  BasicOpenGLView.h  BasicOpenGLView.mm  CMakeLists.txt  ColorPermMap.cpp  ColorPermMap.h  ColorPermutation.cpp  ColorPermutation.h  Cube.cpp  Cube.h  CubeHandler.cpp  CubeHandler.h  CubeSolver.cpp  CubeSolver.h  Cubelet.cpp  Cubelet.h  DetectRubik.h  DetectRubik.mm  DummyCubeSolver.cpp  DummyCubeSolver.h  GLCheck.cpp  GLCheck.h  GenBruteSolve.cpp  RubikBase.cpp  RubikBase.h  RubikUtil.h  RubikUtil.mm  ThistleSolver.cpp  ThistleSolver.h  drawInfo.mm  trackball.h
Cocoa OpenGL.xcodeproj/: project.pbxproj
Cocoa OpenGL.xcodeproj/project.xcworkspace/xcuserdata/js.xcuserdatad/: UserInterfaceState.xcuserstate
Cocoa OpenGL.xcodeproj/xcuserdata/js.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist  Breakpoints_v2.xcbkptlist
Cocoa OpenGL.xcodeproj/xcuserdata/js.xcuserdatad/xcschemes/: Cocoa OpenGL.xcscheme
English.lproj/MainMenu.nib/: designable.nib  keyedobjects.nib
RubikLib/: CMakeLists.txt  ColorPermMap.cpp  ColorPermMap.h  ColorPermutation.cpp  ColorPermutation.h  Cube.cpp  Cube.h  CubeHandler.cpp  CubeHandler.h  CubeUtils.h  Cubelet.cpp  Cubelet.h  RubikAssert.cpp  RubikAssert.h  RubikBase.cpp  RubikBase.h
RubikLib/Drawer/: CubeGLDrawer.cpp  CubeGLDrawer.h
RubikLib/Solver/: CubeSolver.cpp  CubeSolver.h  DummyCubeSolver.cpp  DummyCubeSolver.h  ExportCubeSolver.cpp  ExportCubeSolver.h  ExportSolverConvert.cpp  ExportSolverConvert.h  FridrichSolver.cpp  FridrichSolver.h  GenBruteSolve.cpp  GenBruteSolve.h  ThistleSolver.cpp  ThistleSolver.h
tests/: BaseSolveTests.h  CMakeLists.txt  ColorPermMapTests.cpp  ColorPermutationTests.cpp  CubeTests.cpp  DummySolveTests.cpp  ExportSolveTests.cpp  FridrichTest.cpp  GenBruteSolveTest.cpp  PermutationTests.cpp  RubikBaseTests.cpp  ThistleSolverTest.cpp  test-cov.sh
